--- a/index.html
+++ b/index.html
@@ -1,1 +1,461 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>Taymaz Ranjbari</title>
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/css-circular-prog-bar.css">
+</head>
+
+<body>
+  <div class="top_container">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+          <a class="navbar-brand" href="index.html">
+            Taymaz Ranjbari
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+              <ul class="navbar-nav  ">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="index.html"> about </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"> Portfolio </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"> Blog </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Contact Us</a>
+                </li>
+
+              </ul>
+              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+              </form>
+            </div>
+        </nav>
+      </div>
+    </header>
+    <section class="hero_section position-relative">
+      <div class="number-container d-none d-md-block">
+        <div class="number-box">
+          <span>
+            01
+          </span>
+          <hr>
+          <span>
+            02
+          </span>
+        </div>
+      </div>
+      <div class="hero_section-container ">
+
+        <div class="hero_img-box">
+          <img src="images/lawyer.png" alt="">
+        </div>
+        <div class="hero_detail-box">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="hero_detail-container">
+                  <h1>
+                    My Name Is Taymaz <br>
+                    & I’m An mid-level <br>
+                    Front End Developer | React js
+                  </h1>
+                  <p>
+                    React JS , JavaScript , Es7
+                    | Bootstarap , Materail ui
+                    | Tailwind , AntDesign
+                    | Redux , lifeSycle , Hook
+                    | Git , GitLab , Agile/Scrum
+                    | Responsive Design
+                    | Restful Api , Axios
+                    | Functional Component
+                    | Terllo Tasking , Jira
+
+                  </p>
+
+                  <div class="d-flex justify-content-center justify-content-sm-start">
+                    <a href="" class="call_to-btn ">
+                      <span>
+                        Read More
+                      </span>
+                      <img src="images/right-arrow.png" alt="">
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="hero_detail-container">
+                  <h1>
+                    My Name Is Taymaz <br>
+                    & I’m An mid-level <br>
+                    Front End Developer | React js
+                  </h1>
+                  <p>
+                    React JS , JavaScript , Es7
+                    | Bootstarap , Materail ui
+                    | Tailwind , AntDesign
+                    | Redux , lifeSycle , Hook
+                    | Git , GitLab , Agile/Scrum
+                    | Responsive Design
+                    | Restful Api , Axios
+                    | Functional Component
+                    | Terllo Tasking , Jira
+
+                  </p>
+
+                  <div class="d-flex justify-content-center justify-content-sm-start">
+                    <a href="" class="call_to-btn ">
+                      <span>
+                        Read More
+                      </span>
+                      <img src="images/right-arrow.png" alt="">
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+
+
+        </div>
+      </div>
+    </section>
+  </div>
+  <!-- end header section -->
+
+
+  <!-- about section -->
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="about_detail-box">
+            <h3 class="text-uppercase">
+              About Us
+            </h3>
+            <p>
+              I've got more than 7 years of experience of programming , and it's been two years that I've been focusing
+              on react js , JavaScript , Front , Redux … My last project is about wallet and cryptocurrency's dashboard.
+              I'm a hardworking and ontime person and I also can remote work.
+            </p>
+            <div class="d-flex justify-content-center justify-content-sm-start">
+              <a href="" class="sub_call_to-btn ">
+                <span>
+                  Read More
+                </span>
+                <img src="images/right-arrow.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="about_img-box">
+            <img src="images/about.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end about section -->
+
+  <!-- practice section -->
+  <section class="practice_section layout_padding">
+    <div class="container">
+      <div class="d-flex flex-column align-items-center">
+        <p class="heading-text">
+          WANT HELP programminig
+        </p>
+        <h3 class="text-uppercase">
+          Portfolio Work
+        </h3>
+      </div>
+      <div class="practice_container">
+        <div class="practice_box">
+          <div class="practice_img-box">
+            <img src="images/lawyer_icon1.jpg" alt="">
+          </div>
+          <h4>
+            E-Shop
+          </h4>
+        </div>
+        <div class="practice_box">
+          <div class="practice_img-box">
+            <img src="images/lawyer_icon2.jpg" alt="">
+          </div>
+          <h4>
+            Cryptocurrency
+          </h4>
+        </div>
+        <div class="practice_box">
+          <div class="practice_img-box">
+            <img src="images/lawyer_icon3.png" alt="">
+          </div>
+          <h4>
+            Dashboard panel
+
+
+          </h4>
+        </div>
+        <div class="practice_box">
+          <div class="practice_img-box">
+            <img src="images/lawyer_icon4.jpg" alt="">
+          </div>
+          <h4>
+            Monitoring
+
+          </h4>
+        </div>
+      </div>
+      <div class="practice_detail">
+        <p>
+          In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual
+          form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a
+          placeholder before final copy is available.
+        </p>
+        <div class="d-flex justify-content-center">
+          <a href="" class="sub_call_to-btn ">
+            <span>
+              Read More
+            </span>
+            <img src="images/right-arrow.png" alt="">
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- end practice section -->
+
+  <!-- welcome section -->
+
+
+  <section class="welcome_section position-relative">
+    <div class="container ">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="welcome_container">
+            <h3>
+              WELCOME TO The world of programming
+
+            </h3>
+            <div>
+              <h4>
+                Html & CSS
+              </h4>
+              <p>
+                a placeholder before final copy is available. It is also used to temporarily replace text in a process
+                called greeking, which allows designers
+              </p>
+            </div>
+            <div>
+              <h4>
+                JavaScript & React js
+              </h4>
+              <p>
+                to consider the form of a webpage or publication, without the
+                meaning of the text influencing the design.
+              </p>
+            </div>
+            <div class="d-flex justify-content-center justify-content-sm-start">
+              <a href="" class="sub_call_to-btn ">
+                <span>
+                  Read More
+                </span>
+                <img src="images/right-arrow.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end welcome section -->
+
+  <!-- contact section -->
+  <!-- contact section -->
+
+  <section class="contact_section layout_padding">
+
+    <div class="container">
+      <div class="d-flex justify-content-center d-md-block">
+        <h2>
+          Contact Us
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <form action="">
+            <div class="contact_form-container">
+              <div>
+                <div>
+                  <input type="text" placeholder="Name">
+                </div>
+                <div>
+                  <input type="email" placeholder="Email">
+                </div>
+                <div>
+                  <input type="text" placeholder="Phone Number">
+                </div>
+                <div class="mt-5">
+                  <input type="text" placeholder="Message">
+                </div>
+                <div class="mt-5 d-flex justify-content-center justify-content-sm-start">
+                  <button type="submit">
+                    Send
+                  </button>
+                </div>
+              </div>
+
+            </div>
+
+          </form>
+        </div>
+        <div class="col-md-6">
+          <div class="contact_img-box">
+            <img src="images/contact.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end contact section -->
+  <!-- info section -->
+  <section class="info_section">
+    <div class="container ">
+      <div class="row custom_border-btm pb-4">
+        <div class="col-md-4 info_logo">
+          <h2>
+            Taymaz Ranjbari
+          </h2>
+          <p>
+            I've got more than 7 years of experience of programming , and it's been two years that I've been focusing on
+            react js ,I'm a hardworking and ontime person and I also can remote work.
+          </p>
+        </div>
+        <div class="col-md-4 info_address">
+          <h5>
+            Address
+          </h5>
+          <p>
+            I am Online https://wa.me/989016164416 , Tehran. Karaj ....
+          </p>
+          <p>
+            (+98) 9011614416
+          </p>
+          <p>
+            info@taymazranjbari.ir
+          </p>
+        </div>
+        <div class="col-md-4 info_news">
+          <h5>
+            Newsletter
+          </h5>
+          <form action="">
+            <div>
+              <input type="email" placeholder="Enter your email">
+            </div>
+            <div>
+              <button type="submit">
+                Subscribe
+              </button>
+            </div>
+          </form>
+        </div>
+
+      </div>
+
+      <div>
+        <div class="info_social">
+          <div>
+            <a href="https://www.linkedin.com/in/taymaz-ranjbari-02033517b/">
+              <img src="images/fb.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/taymaz-ranjbari-02033517b/">
+              <img src="images/twitter.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/taymaz-ranjbari-02033517b/">
+              <img src="images/linkedin.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/taymaz-ranjbari-02033517b/">
+              <img src="images/insta.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- endsss info section -->
+
+  <!-- end contact section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      Copyright &copy; 2022 All Rights Reserved By
+      <a href="index.html"> taymaz ranjbari </a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <!-- progreesbar script -->
+
+  </script>
+</body>
+
+</html>
